Version 0.5.0
    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward)
    * [Fix] Connection issue when Job and Rss autorefresh are both enabled
    * [Fix] Configuration Panel: File input fields have no validator
    * [Fix] Configuration Panel: Rename 'Password' to 'Password file'

Version 0.4.4:
    * [Add] Nested View support (1 level only)
    * [Add] Job Tree : Build Description is displayed as tooltip
    * [Upd] Plugin SDK Migration to version 107.587 (IDEA 10.5.2)
    * [Fix] Handle Http redirection

Version 0.4.3:
    * [Fix] Jetbrains plateform version used in Phpstorm IDE makes the plugin crash
    * [Fix] Rss toolbar Panel Layout should be fixed (again)

Version 0.4.2:
    * [Upd] Support other JetBrains product
    * [Fix] Unsupported build parameters should not raise an error
    * [Fix] Regression in refreshing job
    * [fix] Rss toolbar Panel Layout should be fixed
    * [Fix] After clearing all rss entries, when clicking on update button, rss entries do not appear on the panel

Version 0.4.1:
    * [Add] Configuration Panel: Crumb Data can be read from a local file (see explaination on the wiki)
    * [Rem] Discover Wizard button does not work well
    * [Fix] Bad Implementation of Cross Site Request Forgery Prevention Support makes the plugin crash

Version 0.4.0:
    * [Fix] Remove HttpClient from package (already embedded in Idea 10) and limit this version to Idea 10.x
    * [Fix] Cross Site Request Forgery Prevention Support (see wiki for limitations)
    * [Fix] Encoded space character in url

Version 0.3:
    * [Add] Parameterized Builds are supported (see wiki to see limitations)
    * [Add] Browser Panel: health icon for each job
    * [Update] Configuration Panel :  add Button Wizard which try to resolve security configuration
    * [Update] Security Support : Rewrite from scratch with replacing CLI by HttpClient (see wiki for more info)