@@ -56,9 +56,9 @@ does not cover all needs and it is opened for any suggestion that you can send b
 Thanks :
 
 I would like to thank
-- Mark James author of the famfamfam web site who provides beautiful icons.
 - Kohsuke Kawaguchi for providing us such a great CI server
-- Sébastian Le Merdy for providing support for Eclipse version
-- Jetbrains Team for providing us an incredible IDE (certainly the best that Java developers could have).
+- Jetbrains Team for providing us such an incredible IDE (certainly the best that Java developers could have).
+- Marcin Zajączkowski for his smart suggestions
+- Mark James author of the famfamfam web site who provides beautiful icons.
 - Guys from Lex Group : Boris Gonnot, Regis Medina, Sébastien Crego, Olivier Catteau, Jean Baptiste Potonnier and others Agile ninjas.
 - My wife and my daughter who support me to have fun in software development and also remind me my husband/father duty ;).
