@@ -14,10 +14,13 @@
     </project-components>
 
     <change-notes><![CDATA[
-Version 0.5.0
-    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward)
-    * [Fix] Connection issue when Job and Rss autorefresh are both enabled
-    * [Fix] Configuration Panel: File input field has no form validator
-    * [Fix] Configuration Panel: Rename 'Password' to 'Password file'
+<ul>Version 0.5.0
+    <li>[Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward, the search feature is cyclic)</li>
+    <li>[Add] Jenkins Widget that displays either a blue icon (no broken build on selected view) or else a red icon with the number of the remaining broken builds</li>
+    <li>[Upd] Increase loading performance</li>
+    <li>[Fix] Connection issue when Job and Rss autorefresh are both enabled</li>
+    <li>[Fix] Configuration Panel: File input fields should have a validator</li>
+    <li>[Fix] Configuration Panel: Rename 'Password' to 'Password file'</li>
+</ul>
 ]]> </change-notes>
 </idea-plugin>
