@@ -1,7 +1,9 @@
 Version 0.5.0
-    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward)
+    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward, the search feature is cyclic)
+    * [Add] Jenkins Widget that displays either a red icon when the number of the broken builds > 0 or else a blue icon.
+    * [Upd] Increase loading performance
     * [Fix] Connection issue when Job and Rss autorefresh are both enabled
-    * [Fix] Configuration Panel: File input fields have no validator
+    * [Fix] Configuration Panel: File input fields should have a validator
     * [Fix] Configuration Panel: Rename 'Password' to 'Password file'
 
 Version 0.4.4:
